fix: change z-index handling so highlighting works with backgrounds

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-html.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-html.scss
@@ -12,7 +12,10 @@
   .field--rect {
     position: absolute;
     background-color: $highlight;
-    // TODO why is z-index necessary?
-    z-index: -1;
   }
+}
+
+.#{$prefix}--html__content {
+  // needed so that absolutely positioned `.field--rect`s render underneath text
+  position: relative;
 }
